--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "installedapp",
   "version": "0.1.0",
-  "homepage": "https://intacting.github.io/intact-meetings/",
+  "homepage": "/intact-meetings/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
