--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "installedapp",
   "version": "0.1.0",
-  "homepage": "/intact-meetings/",
+  "homepage": ".",
   "private": true,
+  "proxy": "http://172.105.48.31",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
